bugfix: overflow on body works only on mobile/tablet mode, not desktop

--- a/src/blocks/modules/_modules.scss
+++ b/src/blocks/modules/_modules.scss
@@ -6,6 +6,3 @@
 @import 'contact-form/contact-form';
 @import "footer/footer";
 
-.menu-opened {
-  overflow: hidden;
-}
