--- a/src/styles/base/_general.scss
+++ b/src/styles/base/_general.scss
@@ -27,8 +27,14 @@ body {
     grid-template-rows: auto 1fr auto;
     min-width: 300px;
     height: 100vh;
+    min-height: 365px;
     margin: 0 auto;
     font-family: $basic-font;
     letter-spacing: -0.32px;
   }
-  
+
+.menu-opened {
+  @media (max-width: ($lg - 1)) {
+    overflow: hidden;
+  }
+}
